# babel-serverless-api

./: .env.local.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .watchmanconfig  README.md  config_example.toml  jest.integration.js  jest.unit.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json
.github/workflows/: post-deployment.yml
api/: babel.ts  completion.ts  gateway.ts  handler.ts  hello.ts  index.ts  messages.ts  ping.ts  saveMessage.ts
internal/: constant.ts
internal/auth/: index.ts  isAdmin.ts  isAuthorized.ts
internal/github/: getPrompt.ts  index.ts
internal/openai/: index.ts
internal/utils/: chatCompletionToFirstChoiceMessageContent.ts  randomMessages.ts
notebooks/: memory_assistant.ipynb  memory_classifier.ipynb  memory_interface.ipynb
runner/: server.ts
src/: constants.ts  index.ts  main.py
src/api/: hello.ts
src/auth/: index.ts  isAdmin.ts  isAuthorized.ts  isDev.ts  isValidRequest.ts  shouldHandleRequest.ts
src/github/: getConversation.ts  getData.ts  getIndex.ts  getPrompt.ts  getResource.ts  index.ts  saveMessage.ts  saveResource.ts
src/google/: auth.ts  getMessages.ts
src/handler/: handleChatCompletion.ts  handleChatCompletionStreaming.ts  handleClassificationChatCompletion.ts  handleCommand.ts  handleCompletionRequest.ts  handleEcho.ts  handleMessagesRequest.ts  handleSaveMessageRequest.ts  handleSecureRequest.ts  index.ts  loadConversation.ts  loadPrompts.ts
src/logger/: index.ts
src/memories/: getMemoriesByKeys.ts  index.ts
src/memory/: getMemoriesByKeys.ts
(+12 files in other folders)
