[tool.poetry]
name = "babel-api"
version = "0.1.0"
description = ""
authors = ["margostino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "1.10.14"
openai = "^1.35.3"
ipykernel = "^6.29.4"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
