[tool.poetry]
name = "babel-api"
version = "0.1.0"
description = ""
authors = ["margostino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "2.8.2"
openai = "^1.35.3"
ipykernel = "^6.29.4"
pyyaml = "^6.0.1"
weaviate-client = "^4.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
